--- a/docs/ssjs/debugging-ssjs.mdx
+++ b/docs/ssjs/debugging-ssjs.mdx
@@ -293,7 +293,7 @@ try {
         }
     }
 } catch (error) {
-    debugValue('reCaptcha Error', error)
+    debugValue('reCaptcha Error', error);
 }
 ```
 
