--- a/docs/config/sfmc-config-features-on-demand.mdx
+++ b/docs/config/sfmc-config-features-on-demand.mdx
@@ -98,7 +98,7 @@ Push Send Log | Allows you to log send-time data about your push notifications. 
 Feature Name | Description | Documentation | Type
 -- | -- | -- | --
 Send Time Attributes in a Discover Report | Allows you to add up to 15 Send Time Attributes to the Discover Reports (similar to Send log feature) | [Discover Sent Time Attributes](https://help.salesforce.com/articleView?id=sf.mc_di_send_time_attributes.htm&type=5) | Paid
-Discover Reporting Tool | Allows you to create new complex reports using templates that leverage measures and attributes. Soon to be replaced by Datorama Reporting. | [Discover Reporting Tool](https://help.salesforce.com/articleView?id=sf.mc_di_discover.htm&type=5) | Paid
+Datorama Reports | Allows you to create new complex reports using templates that leverage measures and attributes. Replaced the Discover Reporting Tool. | [Discover Reporting Tool](https://help.salesforce.com/articleView?id=sf.mc_di_discover.htm&type=5) | Paid
 Custom Reports | Allows you to request creating a new Report aligned with your needs. | N/A | Paid
 Account Utilisation Report | Ad hoc request to get the current utilisation status of Super Messages. | N/A | Free
 
