--- a/docs/ssjs/ssjs-loops.mdx
+++ b/docs/ssjs/ssjs-loops.mdx
@@ -30,9 +30,9 @@ The classic `for` loop might be a bit long to write, but it has a lot of excelle
 
 ```js {1} title="Example of for loop iterating over an array"
 for (var i = 0; i < array.length; i++) {
-    Write(i)                            // Returns the current iteration
+    Write(i);                           // Returns the current iteration
     Write(array[i] + '<br/><br/>');     // Returns the value of current element
-}
+};
 ```
 
 Let's break the script down to five steps each `for` loop follows:
@@ -46,9 +46,9 @@ To optimize speed, cache the length used for condition. By assigning it to a var
 
 ```js {1} title="Initial expression assigns array.length to a variable to cache it"
 for (var i = 0, range = array.length; i < range; i++) {
-    Write(i)                            // Returns the current iteration
+    Write(i);                           // Returns the current iteration
     Write(array[i] + '<br/><br/>');     // Returns the value of current element
-}
+};
 ```
 
 You can get more logic within the `for` declaration to, for example, have a cleaner statement within the loop:
@@ -56,7 +56,7 @@ You can get more logic within the `for` declaration to, for example, have a clea
 ```js {1} title="Provide itemValue variable instead of just current iteration"
 for (var i = 0, itemValue = array[i], range = array.length; i < range; i++, itemValue = array[i]) {
     Write(itemValue + '<br/><br/>');    // Returns the value of current element
-}
+};
 ```
 
 As ES6 [for...of](../js/js-loops.mdx#for-of) loop is not available in SSJS, you will use this one in most scenarios.
@@ -70,7 +70,7 @@ In SSJS however, the ES6 [for...of](../js/js-loops.mdx#for-of) loop is not avail
 ```js {1}
 for (var key in object) {
     Write(key + '<br/><br/>');          // Returns string name of the current key
-}
+};
 ```
 
 In simple scripts created in SSJS you shouldn't have issues with the prototype methods and properties, however, if you encounter any issues (or want to code defensively), use `hasOwnProperty` method:
@@ -79,8 +79,8 @@ In simple scripts created in SSJS you shouldn't have issues with the prototype m
 for (var key in object) {
     if (object.hasOwnProperty(key) && key != '_type') {
         Write(key + '<br/><br/>');
-    }
-}
+    };
+};
 ```
 
 Remember to use `for...in` only for looping over objects. For any other scenario classic `for` loop is both safer and more powerful.
@@ -100,10 +100,10 @@ If you ever use `for...in` loop for an array, remember that the loop-counter var
 A `while` loop executes its statement as long as the condition evaluates to true.
 
 ```js {2} title="Infinite while loop"
-var run = true
+var run = true;
 while (run === true) {
     Write('To the infinity and beyond!');
-}
+};
 ```
 
 To break out of `while` loop, there must be logic within it that will change the condition to false (or a `break` statement):
@@ -116,8 +116,8 @@ while (run === true) {
     i++;
     if (i > 10) {
         run = false;
-    }
-}
+    };
+};
 ```
 
 or just:
@@ -128,7 +128,7 @@ var i = 0;
 while (i <= 10) {
     Write('To the infinity and beyond!');
     i++;
-}
+};
 ```
 
 `while` loop is the best option for iterating over **big** arrays.
@@ -140,7 +140,7 @@ Same as `while`, but the code runs once before evaluating the condition.
 ```js {1,3}
 do {
     Write('Running!');
-} while (run === true)
+} while (run === true);
 ```
 
 Perfect when you need to run an API call, check whether there are more pages of outcomes and act accordingly.
